Configure app for deployment